# rustify

./: .container-metadata.json  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  app-metadata.json  docker-compose.yml  envVars.txt  haproxy.cfg  index.js  install.sh  k8s-deployment.yaml  k8s-service.yaml  monitoring.yaml  next.config.js  package.json  quota.yaml  supervisord.conf  test-deployment.yaml  test_deploy  test_deploy.rs  todo-list.json
.github/workflows/: ci.yml  release.yml
pages/: index.js
src/: deploy.rs  distribution.rs  gradient.rs  main.rs  optimizations.rs
src/config/: haproxy.rs  nginx.rs
src/infrastructure/: mod.rs
